// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButtonLabeled [common] example testing should match snapshot(s) for Interactive 1`] = `
<section>
  <span
    style="display:inline-flex;flex-direction:column;align-items:flex-start"
  >
    <label
      class="lucid-RadioButtonLabeled lucid-RadioButtonLabeled-is-selected"
      style="margin-bottom:3px"
    >
      <span
        class="lucid-RadioButton lucid-RadioButton-is-selected"
      >
        <input
          checked=""
          class="lucid-RadioButton-native"
          type="radio"
        />
        <span
          class="lucid-RadioButton-visualization-glow"
        />
        <span
          class="lucid-RadioButton-visualization-container"
        />
        <span
          class="lucid-RadioButton-visualization-dot"
        />
      </span>
      <div
        class="lucid-RadioButtonLabeled-label"
      >
        Vanilla
      </div>
    </label>
    <label
      class="lucid-RadioButtonLabeled"
      style="margin-bottom:3px"
    >
      <span
        class="lucid-RadioButton"
      >
        <input
          class="lucid-RadioButton-native"
          type="radio"
        />
        <span
          class="lucid-RadioButton-visualization-glow"
        />
        <span
          class="lucid-RadioButton-visualization-container"
        />
        <span
          class="lucid-RadioButton-visualization-dot"
        />
      </span>
      <div
        class="lucid-RadioButtonLabeled-label"
      >
        Chocolate
      </div>
    </label>
    <label
      class="lucid-RadioButtonLabeled"
      style="margin-bottom:3px"
    >
      <span
        class="lucid-RadioButton"
      >
        <input
          class="lucid-RadioButton-native"
          type="radio"
        />
        <span
          class="lucid-RadioButton-visualization-glow"
        />
        <span
          class="lucid-RadioButton-visualization-container"
        />
        <span
          class="lucid-RadioButton-visualization-dot"
        />
      </span>
      <div
        class="lucid-RadioButtonLabeled-label"
      >
        Strawberry
      </div>
    </label>
    <label
      class="lucid-RadioButtonLabeled"
      style="margin-bottom:3px"
    >
      <span
        class="lucid-RadioButton"
      >
        <input
          class="lucid-RadioButton-native"
          type="radio"
        />
        <span
          class="lucid-RadioButton-visualization-glow"
        />
        <span
          class="lucid-RadioButton-visualization-container"
        />
        <span
          class="lucid-RadioButton-visualization-dot"
        />
      </span>
      <div
        class="lucid-RadioButtonLabeled-label"
      >
        Salted caramel
      </div>
    </label>
    <label
      class="lucid-RadioButtonLabeled"
      style="margin-bottom:3px"
    >
      <span
        class="lucid-RadioButton"
      >
        <input
          class="lucid-RadioButton-native"
          type="radio"
        />
        <span
          class="lucid-RadioButton-visualization-glow"
        />
        <span
          class="lucid-RadioButton-visualization-container"
        />
        <span
          class="lucid-RadioButton-visualization-dot"
        />
      </span>
      <div
        class="lucid-RadioButtonLabeled-label"
      >
        Mint choc chip (the best)
      </div>
    </label>
  </span>
</section>
`;

exports[`RadioButtonLabeled [common] example testing should match snapshot(s) for LabelAsChild 1`] = `
<section>
  <section>
    <label
      class="lucid-RadioButtonLabeled"
      style="margin-bottom:3px"
    >
      <span
        class="lucid-RadioButton"
      >
        <input
          class="lucid-RadioButton-native"
          type="radio"
        />
        <span
          class="lucid-RadioButton-visualization-glow"
        />
        <span
          class="lucid-RadioButton-visualization-container"
        />
        <span
          class="lucid-RadioButton-visualization-dot"
        />
      </span>
      <div
        class="lucid-RadioButtonLabeled-label"
      >
        Just text
      </div>
    </label>
    <label
      class="lucid-RadioButtonLabeled"
      style="margin-bottom:3px"
    >
      <span
        class="lucid-RadioButton"
      >
        <input
          class="lucid-RadioButton-native"
          type="radio"
        />
        <span
          class="lucid-RadioButton-visualization-glow"
        />
        <span
          class="lucid-RadioButton-visualization-container"
        />
        <span
          class="lucid-RadioButton-visualization-dot"
        />
      </span>
      <div
        class="lucid-RadioButtonLabeled-label"
      >
        <span>
          HTML element
        </span>
      </div>
    </label>
  </section>
</section>
`;

exports[`RadioButtonLabeled [common] example testing should match snapshot(s) for LabelAsProp 1`] = `
<section>
  <section>
    <label
      class="lucid-RadioButtonLabeled"
      style="margin-bottom:3px"
    >
      <span
        class="lucid-RadioButton"
      >
        <input
          class="lucid-RadioButton-native"
          type="radio"
        />
        <span
          class="lucid-RadioButton-visualization-glow"
        />
        <span
          class="lucid-RadioButton-visualization-container"
        />
        <span
          class="lucid-RadioButton-visualization-dot"
        />
      </span>
      <div
        class="lucid-RadioButtonLabeled-label"
      >
        Just text
      </div>
    </label>
    <label
      class="lucid-RadioButtonLabeled"
      style="margin-bottom:3px"
    >
      <span
        class="lucid-RadioButton"
      >
        <input
          class="lucid-RadioButton-native"
          type="radio"
        />
        <span
          class="lucid-RadioButton-visualization-glow"
        />
        <span
          class="lucid-RadioButton-visualization-container"
        />
        <span
          class="lucid-RadioButton-visualization-dot"
        />
      </span>
      <div
        class="lucid-RadioButtonLabeled-label"
      >
        <span>
          HTML element
        </span>
      </div>
    </label>
    <label
      class="lucid-RadioButtonLabeled"
      style="margin-bottom:3px"
    >
      <span
        class="lucid-RadioButton"
      >
        <input
          class="lucid-RadioButton-native"
          type="radio"
        />
        <span
          class="lucid-RadioButton-visualization-glow"
        />
        <span
          class="lucid-RadioButton-visualization-container"
        />
        <span
          class="lucid-RadioButton-visualization-dot"
        />
      </span>
      <div
        class="lucid-RadioButtonLabeled-label"
      >
        Text in an array
      </div>
    </label>
    <label
      class="lucid-RadioButtonLabeled"
      style="margin-bottom:3px"
    >
      <span
        class="lucid-RadioButton"
      >
        <input
          class="lucid-RadioButton-native"
          type="radio"
        />
        <span
          class="lucid-RadioButton-visualization-glow"
        />
        <span
          class="lucid-RadioButton-visualization-container"
        />
        <span
          class="lucid-RadioButton-visualization-dot"
        />
      </span>
      <div
        class="lucid-RadioButtonLabeled-label"
      >
        <span>
          HTML element in an array
        </span>
      </div>
    </label>
  </section>
</section>
`;

exports[`RadioButtonLabeled [common] example testing should match snapshot(s) for States 1`] = `
<section>
  <label
    class="lucid-RadioButtonLabeled"
    style="margin-bottom:3px;margin-right:13px"
  >
    <span
      class="lucid-RadioButton"
    >
      <input
        class="lucid-RadioButton-native"
        type="radio"
      />
      <span
        class="lucid-RadioButton-visualization-glow"
      />
      <span
        class="lucid-RadioButton-visualization-container"
      />
      <span
        class="lucid-RadioButton-visualization-dot"
      />
    </span>
    <div
      class="lucid-RadioButtonLabeled-label"
    >
      (default props)
    </div>
  </label>
  <section
    style="display:flex"
  >
    <label
      class="lucid-RadioButtonLabeled lucid-RadioButtonLabeled-is-disabled"
      style="margin-bottom:3px;margin-right:13px"
    >
      <span
        class="lucid-RadioButton lucid-RadioButton-is-disabled"
      >
        <input
          class="lucid-RadioButton-native"
          disabled=""
          type="radio"
        />
        <span
          class="lucid-RadioButton-visualization-glow"
        />
        <span
          class="lucid-RadioButton-visualization-container"
        />
        <span
          class="lucid-RadioButton-visualization-dot"
        />
      </span>
      <div
        class="lucid-RadioButtonLabeled-label"
      >
        Disabled
      </div>
    </label>
    <label
      class="lucid-RadioButtonLabeled lucid-RadioButtonLabeled-is-selected"
      style="margin-bottom:3px;margin-right:13px"
    >
      <span
        class="lucid-RadioButton lucid-RadioButton-is-selected"
      >
        <input
          checked=""
          class="lucid-RadioButton-native"
          type="radio"
        />
        <span
          class="lucid-RadioButton-visualization-glow"
        />
        <span
          class="lucid-RadioButton-visualization-container"
        />
        <span
          class="lucid-RadioButton-visualization-dot"
        />
      </span>
      <div
        class="lucid-RadioButtonLabeled-label"
      >
        Selected
      </div>
    </label>
    <label
      class="lucid-RadioButtonLabeled lucid-RadioButtonLabeled-is-disabled lucid-RadioButtonLabeled-is-selected"
      style="margin-bottom:3px;margin-right:13px"
    >
      <span
        class="lucid-RadioButton lucid-RadioButton-is-disabled lucid-RadioButton-is-selected"
      >
        <input
          checked=""
          class="lucid-RadioButton-native"
          disabled=""
          type="radio"
        />
        <span
          class="lucid-RadioButton-visualization-glow"
        />
        <span
          class="lucid-RadioButton-visualization-container"
        />
        <span
          class="lucid-RadioButton-visualization-dot"
        />
      </span>
      <div
        class="lucid-RadioButtonLabeled-label"
      >
        Disabled & selected
      </div>
    </label>
  </section>
</section>
`;
